fixed overflow bug

--- a/draw_rsc/style.css
+++ b/draw_rsc/style.css
@@ -11,6 +11,7 @@ canvas#canvas {
 	height: 100%;
 	margin: 0;
 	outline: none;
+	overflow: scroll;
 }
 
 button#toggle {
